codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_enable_prompt_non_admin_risk.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 120)"
---
  Set up the Codex agent sandbox to protect your files and control network access. Learn more
  <https://developers.openai.com/codex/windows>

› 1. Set up default sandbox (requires Administrator permissions)
  2. Use non-admin sandbox (higher risk if prompt injected)       Commands can delete or move files outside your
                                                                  workspace
  3. Quit

  Press enter to confirm or esc to go back
